<resources>
    <string name="placeholder_email">simon.berggren581@gmail.com</string>
    <string name="placeholder_password">abc123</string>

    <string name="app_name">My Economics</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last name</string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="confirmemail">Confirm Email</string>
    <string name="cancel">Cancel</string>
    <string name="economy">Economy</string>
    <string name="statistics">Statistics</string>
    <string name="overview">Overview</string>
    <string name="all_entries">All Entries</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="sum">Sum</string>
    <string name="title_activity_login">Sign in</string>

    // db category expenses
    <string name="db_category_transport">Transport</string>
    <string name="db_category_entertainment">Entertainment</string>
    <string name="db_category_food">Food</string>
    <string name="db_category_household">Household</string>
    <string name="db_category_shopping">Shopping</string>
    <string name="db_category_other">Other</string>

    // db category incomes
    <string name="db_category_savings">Savings</string>
    <string name="db_category_salary">Salary</string>

    // db types
    <string name="db_type_income">Income</string>
    <string name="db_type_expense">Expense</string>

    // category expenses
    <string name="category_transport_text">Transport</string>
    <string name="category_entertainment_text">Entertainment</string>
    <string name="category_food_text">Food</string>
    <string name="category_household_text">Household</string>
    <string name="category_shopping_text">Shopping</string>
    <string name="category_other_text">Other</string>

    // category incomes
    <string name="category_savings_text">Savings</string>
    <string name="category_salary_text">Salary</string>

    // types
    <string name="type_income_text">Income</string>
    <string name="type_expense_text">Expense</string>
    <string name="type_all_text">All</string>

    <string-array name="type_spinner_entries">
        <item>@string/type_all_text</item>
        <item>@string/type_income_text</item>
        <item>@string/type_expense_text</item>
    </string-array>

    <string-array name="income_category_spinner_entries">
        <item>@string/category_salary_text</item>
        <item>@string/category_savings_text</item>
        <item>@string/category_other_text</item>
    </string-array>

    <string-array name="expense_category_spinner_entries">
        <item>@string/category_transport_text</item>
        <item>@string/category_entertainment_text</item>
        <item>@string/category_food_text</item>
        <item>@string/category_household_text</item>
        <item>@string/category_shopping_text</item>
        <item>@string/category_other_text</item>
    </string-array>
</resources>
