<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/margin_small"
    android:animateLayoutChanges="true"
    >
    <LinearLayout
        android:id="@+id/entry_type_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_alignParentStart="true"
        >
    <ImageView
        android:id="@+id/entry_type_image"
        android:layout_width="@dimen/icon_size_medium"
        android:layout_height="@dimen/icon_size_medium"
        android:src="@drawable/economy_icon"
        />
    </LinearLayout>
    <TextView
        android:id="@+id/entry_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/entry_type_layout"
        android:text="@string/title"
        android:textSize="@dimen/text_size_small"

        />
    <TextView
        android:id="@+id/entry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/entry_type_layout"
        android:layout_below="@id/entry_title"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/date"
        android:textSize="@dimen/text_size_small_tiny"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_small"
        android:textAlignment="gravity"
        android:gravity="right"
        >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layout_sum_info"

            >
            <TextView
                android:id="@+id/entry_sum_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:text="@string/sum"
                android:textAlignment="gravity"
                android:gravity="right"
                android:layout_marginRight="@dimen/margin_small"
                />
        <TextView
            android:id="@+id/entry_category_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_tiny"
            android:text="@string/category"
            android:layout_margin="@dimen/margin_small"
            android:textAlignment="gravity"
            android:gravity="right"
            />
            </LinearLayout>
            <ImageView
                android:id="@+id/entry_category_image"
                android:layout_width="@dimen/icon_size_medium"
                android:layout_height="@dimen/icon_size_medium"
                android:src="@drawable/economy_icon"
                android:layout_toRightOf="@id/layout_sum_info"
                />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>