<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_small"
    >
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/entry_title"
        android:text="Title"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_size_large"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/id_desc"
            android:text="ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/text_size_medium"
            android:inputType="text"
            />
        <TextView
            android:id="@+id/colon_id"
            android:text=": "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/text_size_medium"
            />
        <TextView
            android:id="@+id/entry_id"
            android:text="0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/date_desc"
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/text_size_medium"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=": "
            android:id="@+id/colon_date"
            android:textSize="@dimen/text_size_medium"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="YYYY-MM-DD"
            android:id="@+id/entry_date"
            android:textSize="@dimen/text_size_small"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/type"
            android:id="@+id/type_desc"
            android:textSize="@dimen/text_size_medium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=": "
            android:id="@+id/colon_type"
            android:textSize="@dimen/text_size_medium"
            />

        <Spinner
            android:singleLine="true"
            android:id="@+id/edit_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/category_desc"
            android:text="@string/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/text_size_medium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=": "
            android:id="@+id/colon_category"
            android:textSize="@dimen/text_size_medium"
            />
        <Spinner
            android:singleLine="true"
            android:id="@+id/edit_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Sum"
            android:id="@+id/sum_desc"
            android:textSize="@dimen/text_size_medium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=": "
            android:id="@+id/colon_sum"
            android:textSize="@dimen/text_size_medium"
            />
            <EditText
                android:singleLine="true"
                android:id="@+id/entry_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="@dimen/text_size_small"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:textAlignment="gravity"
                android:gravity="bottom"
                />
</LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/save_entry_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            style="@style/DarkBlueButtonLeft"
            />

        <Button
            android:id="@+id/cancel_entry_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/DarkBlueButtonRight"
            />
    </LinearLayout>

</LinearLayout>